<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <androidx.viewpager.widget.ViewPager
       android:id="@+id/vp_content"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       />

    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rb_home"
            android:text="@string/text_rb_home"
            style="@style/TabButton"
            android:drawableTop="@drawable/tab_first_selector"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rb_category"
            android:text="@string/text_rb_category"
            style="@style/TabButton"
            android:drawableTop="@drawable/tab_second_selector"
            />
        <RadioButton
            android:id="@+id/rb_cart"
            android:text="@string/text_rb_cart"
            style="@style/TabButton"
            android:drawableTop="@drawable/tab_third_selector"
            />
    </RadioGroup>

</LinearLayout>